# osca

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/src/osca_cli/: __init__.py  findings.py  ledger.py  lint.py  llm.py  main.py  package.py  packer.py  replay.py  rules.py  triggers.py
cli/tests/: conftest.py  test_cli.py  test_ledger.py  test_lint.py  test_llm.py  test_pack_load.py  test_replay.py  test_triggers.py
docs/: OSCA-LINT-RULES.md  OSCA-SPEC-v0.2.md  OSCA-SPEC-v0.3.md  OSCA-SPEC-v0.4-draft.md  OSCA-SPEC-v0.4.md  OSCA-WHITEPAPER-v0.1.zh-CN.md  OSCA-WHITEPAPER-v1.0.en.md  OSCA-WHITEPAPER-v1.0.ja.md  OSCA-WHITEPAPER-v1.0.zh-CN.md  OSCA-WHITEPAPER-v1.1.en.md  OSCA-WHITEPAPER-v1.1.ja.md  OSCA-WHITEPAPER-v1.1.zh-CN.md
examples/: deployments.example.yaml
examples/oper-diagnosis.osca/: AGENT.md  README.md  bindings.example.yaml  (+3 more)
host/: README.md  pyproject.toml
host/src/osca_host/: __init__.py  authz.py  challenge.py  connector.py  control.py  episode.py  executor.py  expr.py  gate.py  host.py  loader.py  main.py  policy.py  registry.py  runner.py  secret_resolver.py  settle.py  suspension.py  threads.py  timeouts.py  triggers.py
host/tests/: conftest.py  test_authz.py  test_challenge.py  test_connector.py  test_control.py  test_control_security.py  test_episode.py  test_executor.py  test_expr.py  test_gate.py  test_loader.py  test_main_security.py  test_policy.py  test_registry.py  test_runner.py  test_secret_resolver.py  test_settle.py  test_suspension.py  test_table.py  test_threads.py  test_write_e2e.py
site/: index.html
(+34 files in other folders)
